tests/fixtures/positive/naming/NoAbbreviations_OverrideSuffix.cls
public class ExampleOverrideSuffix {
	public void method() {
		Integer fooId = 0; // 'foo' is abbreviated, Id suffix controls whether this is allowed
	}
}
