tests/fixtures/negative/code-style/ProhibitSuppressWarnings_NOPMD_WithText.cls
// Violation: NOPMD comment with text after
public class Example8 {
    public void method() {
        int unused = 42; // NOPMD - this is accessed by native method
    }
}

